# sugatan_klaviyo

./: .gcloudignore  .gitignore  Pipfile  README.md  broadcast.py  main.py  models.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yaml
configs/: MotivArt.json  SBLA.json  clients.json
schemas/: campaigns.json  metrics.json
templates/: update_from_stage.sql.j2
test/: test_auto.py  test_broadcast.py  test_manual.py  utils.py
